# SOFA

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  TODOs.txt  aclocal.m4  build_sonic.sh  config.h  config.h.in~  config.status  configure  configure.ac  configure~  globals.h  mac_environment.sh  run_astro.sh  run_deep1b.sh  run_messi.sh  run_sald.sh  run_scedc.sh  run_seismic.sh  run_sift1b.sh  test_run.sh
Competitors/faiss/: install_faiss.txt  run_benchmark_mini_batch.py
Datasets/: extract_seisbench.py  extract_seisbench_queries.py  link_to_other_dataset.txt
Docs/: README  README_building_the_project_on_gruenau.txt  links.txt
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: MESSI.h
include/ads/: DTWfunction.h  api.h  barrier.h  calc_utils.h  dft.h  inmemory_index_engine.h  inmemory_query_engine.h  inmemory_topk_engine.h  isax_file_loaders.h  isax_first_buffer_layer.h  isax_index.h  isax_node.h  isax_node_buffer.h  isax_node_record.h  isax_node_split.h  isax_query_engine.h  isax_visualize_index.h  parallel_index_engine.h  parallel_inmemory_query_engine.h  parallel_query_engine.h  pqueue.h  pthread_barrier.h  sfa.h
include/ads/pisa/: pisa.h
notebooks/: add_gaussian_noise.ipynb  correlation_in_variance.ipynb  eval_all-knns.ipynb  eval_all-leafs.ipynb  eval_all-sampling.ipynb  eval_all-spartan.ipynb  eval_all-vector_data.ipynb  eval_all.ipynb  eval_all2.ipynb  eval_all_vector_db.ipynb  eval_approx_all.ipynb  eval_index_creation.ipynb  eval_index_properties.ipynb  frequency.ipynb  gernerate_queries.py  l2_test.ipynb  lower_bounding_rep.ipynb  pp-SOFA_datasets.ipynb  pp_UCR_Datasets.ipynb  sax_vs_sfa.ipynb  sax_vs_sfa.py  tlb-SOFA_datasets.ipynb  tlb-UCR_datasets.ipynb  tlb-all.ipynb  tlb.ipynb  utils.py  variance.ipynb  visualize.ipynb
notebooks/.ipynb_checkpoints/: sax_vs_sfa-checkpoint.ipynb
notebooks/TLB_Logs/: pp_all_sofa_bench_16_128-07-11-24-no_norm.csv  pp_all_sofa_bench_16_16-24-10-24.csv  pp_all_sofa_bench_16_16-27-10-24-no_norm.csv  pp_all_sofa_bench_16_2-27-10-24-no_norm.csv  pp_all_sofa_bench_16_256-07-11-24-no_norm.csv  pp_all_sofa_bench_16_256-24-10-24.csv  pp_all_sofa_bench_16_256-31-10-24-no_norm.csv  pp_all_sofa_bench_16_32-24-10-24.csv  pp_all_sofa_bench_16_64-24-10-24.csv  pp_all_sofa_bench_16_64-27-10-24-no_norm.csv  pp_all_sofa_bench_16_64-31-10-24-no_norm.csv  pp_all_sofa_bench_16_8-07-11-24-no_norm.csv  pp_all_sofa_bench_16_8-31-10-24-no_norm.csv  pp_all_ucr_16_128-18-11-24.csv  pp_all_ucr_16_256-14-10-24.csv  pp_all_ucr_16_32-18-11-24.csv  pp_all_ucr_16_4-18-11-24.csv  pp_all_ucr_16_64-14-10-24.csv  pp_all_ucr_16_8-14-10-24.csv  tlb_16_8_28-02-24.csv  tlb_all_ASAX_sofa_bench_16_128-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_16-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_2-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_256-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_32-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_4-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_64-30-01-25.csv  tlb_all_ASAX_sofa_bench_16_8-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_128-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_16-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_2-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_256-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_32-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_4-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_64-30-01-25.csv  tlb_all_SAX_TD_sofa_bench_16_8-30-01-25.csv  tlb_all_sofa_bench_16_128-24-10-24.csv  tlb_all_sofa_bench_16_16-24-10-24.csv  tlb_all_sofa_bench_16_256-07-11-24-no_norm.csv  tlb_all_sofa_bench_16_256-24-10-24.csv  (+47 more)
notebooks/logs/: high_frequencies.txt  rename.sh
python/: setup.py
python/messi/: __init__.py  _index.pyx  _native.pxd
scripts/: copy_files.sh  experiments_template.txt  output.txt  output_2.txt  run_SimSearchNet_norm.sh  run_all.sh  run_astro.sh  run_benchmark.sh  run_benchmark_knn.sh  run_benchmark_re.sh  run_benchmark_sampling.sh  run_benchmark_seisbench.sh  run_benchmark_single_query.sh  run_bigann.sh  run_bigann_norm.sh  run_cleanup.sh  run_deep1b.sh  run_sald.sh  run_sald_new.sh  run_scedc.sh  run_seisbench.sh  run_seismic.sh  run_seismic_new.sh  run_sift1b.sh  run_spaceV1B.sh  run_spaceV1B_norm.sh  run_text_to_image.sh  run_text_to_image_norm.sh  run_turingANNs_norm.sh
scripts/backup/: run_sald001.sh  run_sald_new.sh  run_sald_new_workloads.sh  run_sald_sonic.sh  run_seismic001.sh  run_seismic_new.sh  run_seismic_new_old.sh  run_seismic_new_workloads.sh  run_seismic_old.sh  run_spaceV1B.sh  run_text_to_image.sh  run_workloads.sh
scripts/high_frequency/: run_astro.sh  run_bigann_norm.sh  run_deep1b.sh  run_sald.sh  run_scedc.sh  run_seisbench.sh  run_sift1b.sh
scripts/knns/: run_astro_knns.sh  run_bigann_norm_knns.sh  run_deep1b_knns.sh  run_sald_knns.sh  run_scedc_knns.sh  run_seisbench_knns.sh  run_sift1b_knns.sh
scripts/old/: run_SimSearchNet_norm.sh  run_benchmark_generated_queries.sh  run_benchmark_other_queries.sh  run_benchmark_vector_data.sh  run_bigann.sh  run_sald.sh  run_sald001.sh  run_sald_new_all_queries.sh  run_sald_new_workloads.sh  run_sald_sonic.sh  run_seisbench.sh  run_seismic.sh  run_seismic001.sh  run_seismic_new_all_queries.sh  run_seismic_new_old.sh  run_seismic_new_workloads.sh  run_seismic_old.sh  run_spaceV1B.sh  run_spaceV1B_norm.sh  run_text_to_image.sh  run_text_to_image_norm.sh  run_turingANNs.sh  run_turingANNs_norm.sh
scripts/sampling_strategy/: run_astro.sh  run_bigann_norm.sh  run_deep1b.sh  run_sald.sh  run_scedc.sh  run_seisbench.sh  run_sift1b.sh
src/ads/: DTWfunction.c  api.c  calc_utils.c  dft.c  inmemory_index_engine.c  inmemory_query_engine.c  inmemory_topk_engine.c  isax_file_loaders.c  isax_first_buffer_layer.c  isax_index.c  isax_node.c  isax_node_buffer.c  isax_node_record.c  isax_node_split.c  isax_query_engine.c  isax_visualize_index.c  parallel_index_engine.c  parallel_inmemory_query_engine.c  parallel_query_engine.c  pqueue.c  sfa.c
src/utils/: MESSI.c
tests/: cython_smoke.py  cython_with_data.py  pca_with_data_sklearn.py
(+3325 files in other folders)
